--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -46,7 +46,7 @@
       <div class="relative">
         <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
    <!--    <img src="https://images.unsplash.com/photo-1506086679524-493c64fdfaa6?q=80&w=1600&auto=format&fit=crop" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> -->
-          <img src="https://raw.githubusercontent.com/italofsa-dotcom/dieta/refs/heads/main/nutri.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
+          <img src="https://dietapronta.online/nutricionista.jpg" alt="Alimentos saudáveis" class="w-full h-72 object-cover"/> 
           <div class="p-6">
             <h3 class="text-xl font-bold">Plano realmente aplicável</h3>
             <p class="mt-1 text-slate-600">Nada de fórmulas mágicas: passos simples, combinações inteligentes e foco no que funciona para <span id="nomeSpan">você</span>.</p>
