--- a/pre-pagamento/index.html
+++ b/pre-pagamento/index.html
@@ -65,7 +65,7 @@
           <h2 class="mt-2 text-2xl font-extrabold">O que já está pronto para você</h2>
 
           <ul class="mt-4 space-y-3 text-slate-700">
-            <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta completa</strong> — 3 opções por refeição (café, almoço, lanche, jantar e ceia) ajustadas ao seu perfil.</span></li>
+            <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Dieta semanal completa</strong> — 3 opções por refeição (café, almoço, lanche, jantar e ceia) ajustadas ao seu perfil.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Livro digital com 200+ receitas</strong> — fáceis, econômicas e saborosas.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Suplementação recomendada</strong> — alinhada ao seu objetivo e biotipo.</span></li>
             <li class="flex gap-3"><span class="mt-1">✅</span><span><strong>Estratégias complementares</strong> — hábitos e ajustes que aceleram o resultado.</span></li>
