--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   <section class="bg-gradient-to-b from-white to-slate-100">
     <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Entenda seu corpo e descubra sua melhor estratégia alimentar</h1>
+        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Desculpra qual é a dieta que realmente funciona para seu tipo de corpo!</h1>
+		  <h2 class="text-3xl md:text-5xl font-extrabold leading-tight">🍉 Seu corpo é único — sua dieta também deve ser. Tenha acesso ao plano completo e personalizado que já transformou milhares de pessoas!</h2>
         <p class="mt-4 text-lg text-slate-600">São 20 perguntas rápidas e objetivas para montar um roteiro inteligente, ajustado ao seu biotipo, rotina e metas. Linguagem simples, sem fórmulas mágicas — só o que realmente ajuda.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
