--- a/approved/index.html
+++ b/approved/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+<!-- Event snippet for Compra conversion page --> <script> gtag('event', 'conversion', { 'send_to': 'AW-17661147688/q7jPCMKArLQbEKj0vuVB', 'value': 1.0, 'currency': 'BRL', 'transaction_id': '' }); </script>
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pagamento aprovado ✅ | Dieta Pronta Online</title>
