--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pt-BR">
 <head>
 
+	<!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8bd1b71a-ff84-437d-a53b-3af6d91d14a8"> </script>
+<!-- End of  Zendesk Widget script -->
+
 	<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17661147688"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17661147688'); </script>
 
 	
