--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra agora qual é a dieta que realmente funciona para seu tipo de corpo!</h1>
 		  <br>
 		  <h2>🍉 Seu corpo é único — Sua dieta também deve ser! Tenha acesso ao plano <strong>COMPELTO</strong> e personalizado que já transformou milhares de pessoas!</h2>
-        <p class="mt-4 text-lg text-slate-600">São 20 perguntas rápidas e objetivas para montar um roteiro inteligente, ajustado ao seu biotipo, rotina e metas. Linguagem simples, sem fórmulas mágicas — só o que realmente ajuda.</p>
+        <p class="mt-4 text-lg text-slate-600">Através de suas respostas vamos montar um plano inteligente, ajustado ao seu biotipo, rotina e metas. Linguagem simples, sem fórmulas mágicas — só o que realmente ajuda.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
           <span class="text-slate-500 self-center">Leva ~2 minutos</span>
