--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     /* ===================== CONFIG ===================== */
     var PRE_PAG_URL   = "/pre-pagamento/";           // página de pré-pagamento
     var LEAD_ENDPOINT = "https://italomelo.com/server/save_lead.php";      // endpoint PHP no seu cPanel
-    var LEAD_TOKEN    = "troque-este-token-seguro-64chars"; // IGUAL AO config.php
+//    var LEAD_TOKEN    = "troque-este-token-seguro-64chars"; // IGUAL AO config.php
 
     /* ================== MICROCOPY & MODELOS ============ */
     var MICROCOPY = {
