--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p class="mt-4 text-lg text-slate-600">Temos um método inteligente e totalmente personalizado para seu corpo, feito para entender o seu corpo e transformar seus hábitos — sem promessas vazias, só resultados possíveis.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
-          <span class="text-slate-500 self-center">Leva ~2 minutos</span>
+          <span class="text-slate-500 self-center">Leva ~1 minuto</span>
         </div>
       </div>
       <div class="relative">
