--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section class="bg-gradient-to-b from-white to-slate-100">
     <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descrubra agora qual dieta realmente funciona para seu corpo!</h1>
+        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descrubra agora qual dieta realmente funciona com seu corpo!</h1>
         <p class="mt-4 text-lg text-slate-600">Temos um método inteligente e totalmente personalizado para seu corpo, feito para entender o seu corpo e transformar seus hábitos — sem promessas vazias, só resultados possíveis.</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
