--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section class="bg-gradient-to-b from-white to-slate-100">
     <div class="container mx-auto px-4 py-10 grid lg:grid-cols-2 gap-10 items-center">
       <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra agora qual é a dieta realmente funciona com seu corpo!</h1>
+        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">🧠 Descubra agora qual a dieta que realmente funciona com seu corpo!</h1>
         <p class="mt-4 text-lg text-slate-600">Tenha sua Dieta 100% Personalizada: Inteligente, Feita pro SEU Corpo – Resultados Reais, Sem Promessas Falsas! Obtenha resultados com método que já mudou a vida de milhares de pessoas!</p>
         <div class="mt-6 flex gap-3">
           <a href="#quiz" class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">Começar agora</a>
