--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="mt-6 p-5 rounded-2xl bg-emerald-50 border border-emerald-200">
-          <h3 class="font-bold">Receba seu plano personalizado no WhatsApp</h3>
+          <h2 class="font-bold">Receba AGORA seu plano COMPLETO e personalizado no WhatsApp</h2>
           <p class="text-slate-700 mt-1">Preencha seus dados para enviar seu resultado.</p>
           <form id="leadForm" class="mt-3 grid md:grid-cols-4 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
