--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           <div class="mt-6 p-5 rounded-2xl bg-emerald-50 border border-emerald-200">
           <h2 class="font-bold">Receba AGORA seu plano COMPLETO e personalizado no WhatsApp</h2>
-          <p class="text-slate-700 mt-1">Preencha seus dados para enviar seu resultado.</p>
+          <p class="text-slate-700 mt-1">Preencha seus dados abaixo e receba imediatamente!</p>
           <form id="leadForm" class="mt-3 grid md:grid-cols-4 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
             <input id="email" type="email" required placeholder="Seu e-mail" class="rounded-xl border-slate-300"
